<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/guardiola_0" />

        <EditText
            android:id="@+id/question1_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question2_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question2"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question2_opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_opt1" />

            <RadioButton
                android:id="@+id/question2_opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_opt2" />

            <RadioButton
                android:id="@+id/question2_opt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_opt3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question3"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/question3_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_opt1" />

        <CheckBox
            android:id="@+id/question3_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_opt2" />

        <CheckBox
            android:id="@+id/question3_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_opt3" />

        <CheckBox
            android:id="@+id/question3_opt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_opt4" />

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question4_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question4"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/question4_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question5"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question5_opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_opt1" />

            <RadioButton
                android:id="@+id/question5_opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_opt2" />

            <RadioButton
                android:id="@+id/question5_opt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_opt3" />
        </RadioGroup>


        <TextView
            android:id="@+id/question6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question5_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question6"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/question6_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/question7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question7"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question7_opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7_opt1" />

            <RadioButton
                android:id="@+id/question7_opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7_opt2" />

            <RadioButton
                android:id="@+id/question7_opt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7_opt3" />
            <RadioButton
                android:id="@+id/question7_opt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7_opt4" />
        </RadioGroup>


        <TextView
            android:id="@+id/question8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question8_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question8"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/question8_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/question9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question9"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question9_opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question9_opt1" />

            <RadioButton
                android:id="@+id/question9_opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question9_opt2" />
            <RadioButton
                android:id="@+id/question9_opt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question9_opt3" />

        </RadioGroup>

        <TextView
            android:id="@+id/question10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question10_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question10"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/question10_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submit"
            android:text="@string/submit_answers" />

    </LinearLayout>
</ScrollView>